--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.36.3",
     "mongodb": "^7.0.0",
     "next": "16.0.10",
+    "openai": "^6.14.0",
     "react": "19.2.1",
     "react-dom": "19.2.1"
   },
